<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="txtView_appChoice">App\'s choice</string>
    <string name="description_img_appChoice">This is where the app\'s choice will be displayed.</string>
    <string name="txtView_chooseOption">Choose an option below</string>
    <string name="paper_image">Paper image</string>
    <string name="rock_image">Rock image</string>
    <string name="scissors_image">Scissors image</string>
</resources>